test/force-app/main/default/objects/Development_Tracker__c/Development_Tracker__c.object-meta.xml
<CustomObject>
    <label>Development Tracker</label>
    <nameField>
        <displayFormat>DEV-{0000}</displayFormat>
        <label>Dev Tracker Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>