test/force-app/main/default/objects/Development_Tracker__c/fields/Aggregate_DG_Feeder_kW__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_DG_Feeder_kW__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Aggregate DG Feeder (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>