test/force-app/main/default/objects/Development_Tracker__c/fields/Average_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Project_Duration__c</fullName>
    <label>Average Project Duration (Calendar Days)</label>
    <summarizedField>PERT_Schedule__c.Expected_Duration__c</summarizedField>
    <summaryForeignKey>PERT_Schedule__c.Development_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>