test/force-app/main/default/objects/Development_Tracker__c/fields/Created_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Created_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Toggle</label>
    <type>Checkbox</type>
</CustomField>