test/force-app/main/default/objects/Development_Tracker__c/fields/Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Development_Stage__c</fullName>
    <label>Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diligence</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Diligence</label>
            </value>
            <value>
                <fullName>Kickoff</fullName>
                <color>#FFFFFF</color>
                <label>Kickoff</label>
            </value>
            <value>
                <fullName>Applications</fullName>
                <color>#FFFFFF</color>
                <label>Applications</label>
            </value>
            <value>
                <fullName>ISA</fullName>
                <color>#FFFFFF</color>
                <label>ISA</label>
            </value>
            <value>
                <fullName>Permits</fullName>
                <color>#FFFFFF</color>
                <label>Permits</label>
            </value>
            <value>
                <fullName>NTP</fullName>
                <color>#FFFFFF</color>
                <label>NTP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>