test/force-app/main/default/objects/Development_Tracker__c/fields/Estimated_Interconnection_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Interconnection_Costs__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Estimated Interconnection Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>