test/force-app/main/default/objects/Development_Tracker__c/fields/Estimated_NTP__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NTP__c</fullName>
    <description>Kickoff call completed date plus estimate NTP timeline</description>
    <formula>Date(Year(Estimated_NTP_Timeline_days__c + Kickoff_Call_Completed__c),month(Estimated_NTP_Timeline_days__c + Kickoff_Call_Completed__c)+1,1)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is equal to kickoff call completed date plus estimated NTP timeline</inlineHelpText>
    <label>Estimated NTP</label>
    <type>Date</type>
</CustomField>