test/force-app/main/default/objects/Development_Tracker__c/fields/Estimated_NTP_Timeline_days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NTP_Timeline_days__c</fullName>
    <description>Average project duration plus 2x standard deviations</description>
    <formula>2*Project_Duration_STD__c + Average_Project_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is equal to the average project duration plus two standard deviations from the mean.</inlineHelpText>
    <label>Estimated NTP Timeline (Calendar Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>