test/force-app/main/default/objects/Development_Tracker__c/fields/Estimated_Utility_Construction_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Utility_Construction_Timeline__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Estimated Utility Construction Timeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>