test/force-app/main/default/objects/Development_Tracker__c/fields/Feeder_Hosting_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Feeder_Hosting_Capacity_kW__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Feeder Hosting Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>