test/force-app/main/default/objects/Development_Tracker__c/fields/Identified_Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Identified_Upgrades__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Identified Upgrades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transformer</fullName>
                <color>#FFFFFF</color>
                <label>Transformer</label>
            </value>
            <value>
                <fullName>Feeder Extensions</fullName>
                <color>#FFFFFF</color>
                <label>Feeder Extensions</label>
            </value>
            <value>
                <fullName>Reconductor</fullName>
                <color>#FFFFFF</color>
                <label>Reconductor</label>
            </value>
            <value>
                <fullName>Express Feeder</fullName>
                <color>#FFFFFF</color>
                <label>Express Feeder</label>
            </value>
            <value>
                <fullName>DTT</fullName>
                <color>#FFFFFF</color>
                <label>DTT</label>
            </value>
            <value>
                <fullName>3V0</fullName>
                <color>#FFFFFF</color>
                <label>3V0</label>
            </value>
            <value>
                <fullName>SCADA</fullName>
                <color>#FFFFFF</color>
                <label>SCADA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>