test/force-app/main/default/objects/Development_Tracker__c/fields/Interconnection_Viability__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Viability__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Interconnection Viability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viable</fullName>
                <color>#FFFFFF</color>
                <label>Viable</label>
            </value>
            <value>
                <fullName>Viable w/ Moderate Cost Mitigation</fullName>
                <color>#FFFFFF</color>
                <label>Viable w/ Moderate Cost Mitigation</label>
            </value>
            <value>
                <fullName>Viable w/ High Cost Mitigation</fullName>
                <color>#FFFFFF</color>
                <label>Viable w/ High Cost Mitigation</label>
            </value>
            <value>
                <fullName>Not Viable</fullName>
                <color>#FFFFFF</color>
                <label>Not Viable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>