test/force-app/main/default/objects/Development_Tracker__c/fields/Kickoff_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Completed__c</fullName>
    <inlineHelpText>Date project kickoff call is completed</inlineHelpText>
    <label>Kickoff Call Completed</label>
    <type>Date</type>
</CustomField>