test/force-app/main/default/objects/Development_Tracker__c/fields/PERT_CPM__c.field-meta.xml
<CustomField>
    <fullName>PERT_CPM__c</fullName>
    <inlineHelpText>Select the CPM to use for PERT Schedule</inlineHelpText>
    <label>PERT CPM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discretionary Approvals</fullName>
            </value>
            <value>
                <fullName>Interconnection</fullName>
            </value>
            <value>
                <fullName>IX+Discretionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>