test/force-app/main/default/objects/Development_Tracker__c/fields/PERT_Project_Variance__c.field-meta.xml
<CustomField>
    <fullName>PERT_Project_Variance__c</fullName>
    <label>PERT Project Variance</label>
    <summarizedField>PERT_Schedule__c.Variance__c</summarizedField>
    <summaryForeignKey>PERT_Schedule__c.Development_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>