test/force-app/main/default/objects/Development_Tracker__c/fields/Pre_App_Requested__c.field-meta.xml
<CustomField>
    <fullName>Pre_App_Requested__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Pre-App Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FFFFFF</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFFFF</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>