test/force-app/main/default/objects/Development_Tracker__c/fields/Project_Duration_STD__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration_STD__c</fullName>
    <formula>SQRT(PERT_Project_Variance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration STD (Calendar Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>