test/force-app/main/default/objects/Development_Tracker__c/fields/Utility_Study_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Utility_Study_Timeline__c</fullName>
    <description>When Dev Diligence Requested is not null</description>
    <label>Utility Study Timeline (Calendar Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>